--- a/Recite/Recite.vcxproj
+++ b/Recite/Recite.vcxproj
@@ -89,8 +89,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CustomTreeWidget.cpp" />
     <ClCompile Include="GlobalApplication.cpp" />
     <ClCompile Include="JsonOper.cpp" />
+    <ClCompile Include="testWindow.cpp" />
     <ClCompile Include="Word.cpp" />
     <QtRcc Include="Recite.qrc" />
     <QtMoc Include="MainWindow.h" />
@@ -105,6 +107,17 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="GlobalApplication.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtUic Include="CustomQTreeWidget.ui" />
+    <QtUic Include="CustomTreeWidget.ui" />
+    <QtUic Include="testWindow.ui" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="CustomTreeWidget.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="testWindow.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
