1.自定义树形控件QTReeWidget，由于上下选择不能通过currentColumn()正确获取选中的column，用来给item->text()获取字符串。并且要保证在可编辑的情况下，3列的中间那列不能被编辑。所以通过变量curColumn手动管理由于左右方向键导致的column变化，要覆写左右方向键的event。

--- a/Recite/Recite.vcxproj
+++ b/Recite/Recite.vcxproj
@@ -89,6 +89,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CustomTree.cpp" />
     <ClCompile Include="CustomTreeWidget.cpp" />
     <ClCompile Include="GlobalApplication.cpp" />
     <ClCompile Include="JsonOper.cpp" />
@@ -109,7 +110,6 @@
     <QtMoc Include="GlobalApplication.h" />
   </ItemGroup>
   <ItemGroup>
-    <QtUic Include="CustomQTreeWidget.ui" />
     <QtUic Include="CustomTreeWidget.ui" />
     <QtUic Include="testWindow.ui" />
   </ItemGroup>
@@ -118,6 +118,9 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="testWindow.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="CustomTree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
